--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
+    "axios": "^0.18.0",
+    "downshift": "^3.2.0",
     "http-proxy-middleware": "^0.19.1",
     "next": "^7.0.2",
     "next-compose-plugins": "^2.1.1",
@@ -19,7 +21,8 @@
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "throttle-debounce": "^2.1.0"
   },
   "devDependencies": {
     "@types/next": "^7.0.5",
@@ -32,7 +35,7 @@
     "redux-devtools-extension": "^2.13.7"
   },
   "scripts": {
-    "start:dev": "nodemon --watch app --watch app/server.js",
+    "dev": "nodemon --watch app --watch app/server.js",
     "build": "NODE_ENV=production next build",
     "start": "NODE_ENV=production node ./app/server.js",
     "heroku-prebuild": "npm i --dev && NODE_ENV=production next build",
