--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.18.0",
+    "dotenv": "^6.2.0",
     "downshift": "^3.2.0",
     "http-proxy-middleware": "^0.19.1",
+    "lodash": "^4.17.11",
     "next": "^7.0.2",
     "next-compose-plugins": "^2.1.1",
     "next-redux-wrapper": "^2.1.0",
