add example fo the map

--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "app/server.js",
   "dependencies": {
+    "@appbaseio/reactivesearch": "^3.0.0-alpha.10",
     "@emotion/core": "^10.0.6",
     "@emotion/styled": "^10.0.6",
     "@material-ui/core": "^3.9.1",
+    "@material-ui/icons": "^3.0.2",
     "@zeit/next-bundle-analyzer": "^0.1.2",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.18.0",
+    "d3": "^5.7.0",
+    "date-fns": "^1.30.1",
     "dotenv": "^6.2.0",
     "downshift": "^3.2.0",
     "http-proxy-middleware": "^0.19.1",
