--- a/.babelrc
+++ b/.babelrc
@@ -1,24 +1,20 @@
 {
-    "presets": [
-      "next/babel",
-      "@zeit/next-typescript/babel"
-    ],
-    "plugins": [
-      [
-        "module-resolver",
-        {
-          "root": [
-            "./"
-          ],
-          "alias": {
-            "@Actions": "./src/Actions",
-            "@Components": "./src/Components",
-            "@Definations": "./src/Definations",
-            "@Interfaces": "./src/Interfaces",
-            "@Reducers": "./src/Redux/Reducers",
-            "@Redux": "./src/Redux"
-          }
+  "presets": ["next/babel", "@zeit/next-typescript/babel"],
+  "plugins": [
+    [
+      "module-resolver",
+      {
+        "root": ["./"],
+        "alias": {
+          "@Actions": "./src/Actions",
+          "@Components": "./src/Components",
+          "@Definations": "./src/Definations",
+          "@Interfaces": "./src/Interfaces",
+          "@Reducers": "./src/Redux/Reducers",
+          "@Api": "./src/Api",
+          "@Redux": "./src/Redux"
         }
-      ]
+      }
     ]
+  ]
 }
