--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@emotion/styled": "^10.0.6",
     "@material-ui/core": "^3.9.1",
     "@material-ui/icons": "^3.0.2",
+    "@types/d3": "^5.7.0",
+    "@types/jest": "^23.3.13",
+    "@types/numeral": "^0.0.25",
     "@zeit/next-bundle-analyzer": "^0.1.2",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
@@ -26,6 +29,7 @@
     "next-routes": "^1.4.2",
     "next-runtime-dotenv": "^1.0.1",
     "node-sass": "^4.11.0",
+    "numeral": "^2.0.6",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
@@ -40,6 +44,7 @@
     "@types/react-redux": "^6.0.11",
     "autoprefixer": "^9.4.3",
     "babel-plugin-module-resolver": "^3.1.1",
+    "jest": "^24.0.0",
     "nodemon": "^1.18.9",
     "redux-devtools-extension": "^2.13.7"
   },
@@ -49,7 +54,8 @@
     "start": "NODE_ENV=production node ./app/server.js",
     "heroku-prebuild": "npm i --dev && NODE_ENV=production next build",
     "export": "NODE_ENV=production next export",
-    "analyze": "BUNDLE_ANALYZE=both npm run build"
+    "analyze": "BUNDLE_ANALYZE=both npm run build",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC"
